argocd/media/automation/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: plex
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
      annotations:
        backup.velero.io/backup-volumes-excludes: plex,seedbox
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
          name: http-web-svc
        volumeMounts:
        - mountPath: "/plex"
          name: plex
        - mountPath: "/config"
          name: config
        - mountPath: "/scratch"
          name: seedbox
        resources:
          requests:
            memory: "0"
          limits:
            memory: "750Mi"
      volumes:
      - name: plex
        persistentVolumeClaim:
          claimName: plex-pvc
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-pvc
      - name: seedbox
        nfs:
          server: 172.16.69.253
          path: /seedbox/torrents
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: plex
spec:
  selector:
    app: sonarr
  type: ClusterIP
  ports:
  - name: sonarr-web-port
    protocol: TCP
    port: 8989
    targetPort: http-web-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-lanonly@kubernetescrd
spec:
  rules:
    - host: sonarr.lan.jibby.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr-service
                port:
                  number: 8989
